# AvStudy

./: build.gradle  dependencies.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniTest.cpp  Mp3FFmpegAudioTrackPlayer.cpp  Mp3FFmpegOpenSLPlayer.cpp  Mp4Decoder.cpp  Mp4FFmpegPlayer.cpp  utils.cpp
app/src/main/cpp/include/: me_yintaibing_avstudy_audio_Mp3FFmpegAudioTrackPlayer.h  me_yintaibing_avstudy_audio_Mp3FFmpegOpenSLPlayer.h  me_yintaibing_avstudy_test_JniTest.h  me_yintaibing_avstudy_video_Mp4Decoder.h  me_yintaibing_avstudy_video_Mp4FFmpegPlayer.h  utils.h
app/src/main/java/me/yintaibing/avstudy/: ContextUtils.java  LibraryLoader.java  MainActivity.java
app/src/main/java/me/yintaibing/avstudy/audio/: AbsMp3Player.java  AudioInfo.java  Mp3DecodeActivity.java  Mp3FFmpegAudioTrackPlayer.java  Mp3FFmpegOpenSLPlayer.java  Mp3MediaPlayer.java
app/src/main/java/me/yintaibing/avstudy/test/: JniTest.java  TestActivity.java
app/src/main/java/me/yintaibing/avstudy/video/: AbsMp4Player.java  MediaPlayerActivity.java  Mp4DecodeActivity.java  Mp4Decoder.java  Mp4FFmpegPlayer.java  Mp4MediaPlayer.java
app/src/main/res/layout/: activity_main.xml  activity_mp3_decode.xml  activity_mp4_decode.xml  activity_test.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
mp3encoder/: build.gradle
mp3encoder/src/main/: AndroidManifest.xml
